--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	-->
 	<properties>
 		<bundle.symbolicName>sample28</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.sample.internal</bundle.namespace>
+		<bundle.namespace>org.cytoscape.wordcloud.internal</bundle.namespace>
 		<cytoscape.api.version>3.1.0-SNAPSHOT</cytoscape.api.version>
 		<maven-bundle-plugin.version>2.3.4</maven-bundle-plugin.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
