--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- logging -->
+		<dependency>
+			<groupId>org.ops4j.pax.logging</groupId>
+			<artifactId>pax-logging-api</artifactId>
+			<version>1.5.2</version>
+			<scope>provided</scope>
+		</dependency>
 		
 		<!-- 3rd Party -->
 		<!--
